--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -20,5 +22,7 @@ _cgo_export.*
 _testmain.go
 
 *.exe
+*.log
 *.test
 *.prof
+*.tmp
